aria2: add aria2 volume, mv aria2.conf to /etc/

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
      - "44130:44130/udp"
     volumes:
      - ./data/aria2/data:/data
+     - ./data/aria2/info:/aria2
      - ./keys:/config/keys
 
 volumes:
