aria2: log-level=notice

--- a/root/etc/aria2.conf
+++ b/root/etc/aria2.conf
@@ -48,8 +48,8 @@ file-allocation=prealloc
 
 # General Options
 log=/aria2/aria2.log
-log-level=info
-
+log-level=notice
+console-log-level=notice
 
 ## 进度保存相关 ##
 # 从会话文件中读取下载任务
